# debug_uart

./: .gitignore  .gitmodules  Proto.py  Proto32.py  ProtoError.py  README.md  Test.py  debug.py  test.py  upload.sh
cfast/: CMakeLists.txt
cfast/src/: main.c
docs/: instruction set.ods
